--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,10 @@
     <string name="title_activity_main_menu">MainMenu</string>
     <string name="sprint">Sprint</string>
     <string name="endurance">Endurance</string>
+    <string name="reflexe">Réflexe</string>
     <string name="jouer">Jouer</string>
     <string name="profil">Profil</string>
+    <string name="title_activity_mode_reflexe">ModeReflexe</string>
+    <string name="hello_world">Hello world!</string>
 
 </resources>
