ajout bouton réinitialiser les scores et partage dans profil

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,5 +27,7 @@
     <string name="musique">Musique: NON</string>
     <string name="evaluer">Évaluer</string>
     <string name="contacter">Contacter</string>
+    <string name="partager">Partager</string>
+    <string name="reinitialiser">Réinitialiser</string>
 
 </resources>
