--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,33 +7,38 @@
     <string name="title_activity_main_menu">MainMenu</string>
     <string name="sprint">Sprint</string>
     <string name="endurance">Endurance</string>
-    <string name="reflexe">Réflexe</string>
-    <string name="jouer">Jouer</string>
-    <string name="profil">Profil</string>
-    <string name="aventure">Aventure</string>
-    <string name="puissance">Puissance</string>
-    <string name="title_activity_mode_reflexe">ModeReflexe</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="title_activity_mode_puissance">ModePuissance</string>
-    <string name="title_activity_mode_sprint">ModeSprint</string>
-    <string name="title_activity_mode_endurance">ModeEndurance</string>
-    <string name="title_activity_resultat_partie">ResultatPartie</string>
-    <string name="title_activity_profil">Profil</string>
+    <string name="reflexe">Reflex</string>
+    <string name="jouer">Play</string>
+    <string name="profil">Profile</string>
+    <string name="aventure">Adventure</string>
+    <string name="puissance">Power</string>
+    <string name="title_activity_mode_reflexe">ReflexMode</string>
+    <string name="title_activity_mode_puissance">PowerMode</string>
+    <string name="title_activity_mode_sprint">SprintMode</string>
+    <string name="title_activity_mode_endurance">EnduranceMode</string>
+    <string name="title_activity_resultat_partie">Result</string>
+    <string name="title_activity_profil">Profile</string>
     <string name="options">Options</string>
     <string name="title_activity_options">Options</string>
     <string name="menu">Menu</string>
-    <string name="tutoriel">Tutoriel: NON</string>
-    <string name="song_touches">Son: NON</string>
-    <string name="musique">Musique: NON</string>
-    <string name="evaluer">Évaluer</string>
-    <string name="contacter">Contacter</string>
-    <string name="tutoSprint">Secouez votre téléphone le plus rapidement possible pendant 3 secondes.</string>
-    <string name="tutoEndurance">Secouez votre téléphone le plus vite possible pendant 20 secondes.</string>
-    <string name="tutoPuissance">Secouez votre téléphone le plus fort possible en 3 secondes.\n Seul le mouvement le plus puissant sera gardé !</string>
+    <string name="tutorielNon">Tutorial: NO</string>
+    <string name="song_touchesNon">Sound: NO</string>
+    <string name="musiqueNon">Music: NO</string>
+    <string name="tutorielOui">Tutorial: YES</string>
+    <string name="song_touchesOui">Sound: YES</string>
+    <string name="musiqueOui">Music: YES</string>
+    <string name="evaluer">Evaluate</string>
+    <string name="contacter">Contact</string>
+    <string name="tutoSprint">Shake your phone le plus rapidement possible pendant 3 secondes.</string>
+    <string name="tutoEndurance">Shake your phone le plus vite possible pendant 20 secondes.</string>
+    <string name="tutoPuissance">Shake your phone le plus fort possible en 3 secondes.\n Seul le mouvement le plus puissant sera gardé !</string>
     <string name="tutoReflexe">Quand le fond est vert : Secouez votre téléphone le plus rapidement possible.\n
                                Quand le fond est jaune : Ne bougez plus votre téléphone. </string>
-    <string name="partager">Partager</string>
-    <string name="reinitialiser">Réinitialiser</string>
+    <string name="partager">Share</string>
+    <string name="reinitialiser">Reset</string>
+    <string name="caloriesbrulees">Calories burned</string>
+    <string name="rejouer">Play again</string>
+    <string name="meilleur">BEST \u0020</string>
     <string name="nothing">...</string>
 
 </resources>
